feat: correct modal video

--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
                     <iframe
                         id="modal-video"
                         class="absolute inset-0 w-full h-full"
-                        src=""
+                        src="https://www.youtube.com/embed/l3MUKgWs0N0?si=gqN8tBSEJNFjDCW1"
+                        title="YouTube video player"
                         frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin"
                         allowfullscreen
                     ></iframe>
                 </div>
