feat: redirects to google drive

--- a/index.html
+++ b/index.html
@@ -174,10 +174,19 @@
 
             <!-- Video Edits -->
             <div class="w-full h-auto flex flex-col gap-4 items-center">
-                <div class="flex gap-4 items-center">
+                <a
+                    class="group flex gap-4 items-center"
+                    href="https://drive.google.com/drive/folders/1Y-jyvxUr4vR2YJqyIpgT7CHwDwFUbbwI"
+                    target="_blank"
+                >
                     <h2 class="text-3xl-gobold font-gobold-bolditalic">VIDEO EDITS</h2>
-                    <img src="assets/triangle.webp" />
-                </div>
+                    <img
+                        src="assets/triangle.webp"
+                        class="transition-all duration-200 transform group-hover:translate-x-4"
+                        alt="Arrow"
+                    />
+                </a>
+
                 <div class="flex flex-row gap-4 w-full overflow-x-scroll custom-scrollbar">
                     <div class="w-auto flex flex-row gap-4">
                         <div class="w-96 h-52 bg-black"></div>
@@ -191,10 +200,18 @@
 
             <!-- Motion Graphics -->
             <div class="w-full h-auto flex flex-col gap-4 items-center">
-                <div class="flex gap-4 items-center">
+                <a
+                    class="group flex gap-4 items-center"
+                    href="https://drive.google.com/drive/folders/1b4u__UN5kev-Eq3igU4ACQ7prQR4Qock"
+                    target="_blank"
+                >
                     <h2 class="text-3xl-gobold font-gobold-bolditalic">MOTION GRAPHICS</h2>
-                    <img src="assets/triangle.webp" />
-                </div>
+                    <img
+                        src="assets/triangle.webp"
+                        class="transition-all duration-200 transform group-hover:translate-x-4"
+                        alt="Arrow"
+                    />
+                </a>
                 <div class="flex flex-row gap-4 w-full overflow-x-scroll custom-scrollbar">
                     <div class="w-auto flex flex-row gap-4">
                         <div class="w-96 h-52 bg-black"></div>
@@ -208,10 +225,18 @@
 
             <!-- SOCIAL SHORT FORMS -->
             <div class="w-full h-auto flex flex-col gap-4 items-center">
-                <div class="flex gap-4 items-center">
+                <a
+                    class="group flex gap-4 items-center"
+                    href="https://drive.google.com/drive/folders/1LiDhytnewkiD2CPxxUpVrxQoJUFWDTys"
+                    target="_blank"
+                >
                     <h2 class="text-3xl-gobold font-gobold-bolditalic">SOCIAL SHORT FORMS</h2>
-                    <img src="assets/triangle.webp" />
-                </div>
+                    <img
+                        src="assets/triangle.webp"
+                        class="transition-all duration-200 transform group-hover:translate-x-4"
+                        alt="Arrow"
+                    />
+                </a>
                 <div class="flex flex-row gap-4 w-full overflow-x-scroll custom-scrollbar">
                     <div class="w-auto flex flex-row gap-4">
                         <div class="w-96 h-52 bg-black"></div>
@@ -225,10 +250,18 @@
 
             <!-- Graphic Designs -->
             <div class="w-full h-auto flex flex-col gap-4 items-center">
-                <div class="flex gap-4 items-center">
+                <a
+                    class="group flex gap-4 items-center"
+                    href="https://drive.google.com/drive/folders/18ItEoWcinDuVWu_9_nMJN8FhG2kemQoD"
+                    target="_blank"
+                >
                     <h2 class="text-3xl-gobold font-gobold-bolditalic">GRAPHIC DESIGNS</h2>
-                    <img src="assets/triangle.webp" />
-                </div>
+                    <img
+                        src="assets/triangle.webp"
+                        class="transition-all duration-200 transform group-hover:translate-x-4"
+                        alt="Arrow"
+                    />
+                </a>
                 <div class="flex flex-row gap-4 w-full overflow-x-scroll custom-scrollbar">
                     <div class="w-auto flex flex-row gap-4">
                         <div class="w-96 h-52 bg-black"></div>
