feat: draggable carousel

--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
                     />
                 </a>
 
-                <div class="flex flex-row gap-4 w-full overflow-x-scroll custom-scrollbar">
+                <div
+                    class="flex flex-row gap-4 w-full overflow-x-auto scroll-smooth group custom-scrollbar carousel-wrapper"
+                >
                     <div class="w-auto flex flex-row gap-4">
                         <div class="w-96 h-52 bg-black"></div>
                         <div class="w-96 h-52 bg-black"></div>
@@ -212,7 +214,9 @@
                         alt="Arrow"
                     />
                 </a>
-                <div class="flex flex-row gap-4 w-full overflow-x-scroll custom-scrollbar">
+                <div
+                    class="flex flex-row gap-4 w-full overflow-x-auto scroll-smooth group custom-scrollbar carousel-wrapper"
+                >
                     <div class="w-auto flex flex-row gap-4">
                         <div class="w-96 h-52 bg-black"></div>
                         <div class="w-96 h-52 bg-black"></div>
@@ -237,7 +241,9 @@
                         alt="Arrow"
                     />
                 </a>
-                <div class="flex flex-row gap-4 w-full overflow-x-scroll custom-scrollbar">
+                <div
+                    class="flex flex-row gap-4 w-full overflow-x-auto scroll-smooth group custom-scrollbar carousel-wrapper"
+                >
                     <div class="w-auto flex flex-row gap-4">
                         <div class="w-96 h-52 bg-black"></div>
                         <div class="w-96 h-52 bg-black"></div>
@@ -262,7 +268,9 @@
                         alt="Arrow"
                     />
                 </a>
-                <div class="flex flex-row gap-4 w-full overflow-x-scroll custom-scrollbar">
+                <div
+                    class="flex flex-row gap-4 w-full overflow-x-auto scroll-smooth group custom-scrollbar carousel-wrapper"
+                >
                     <div class="w-auto flex flex-row gap-4">
                         <div class="w-96 h-52 bg-black"></div>
                         <div class="w-96 h-52 bg-black"></div>
@@ -303,6 +311,7 @@
         <script src="js/parallax.js"></script>
         <script src="js/animations.js"></script>
         <script src="js/modal.js"></script>
+        <script src="js/carousel.js"></script>
 
         <!-- JavaScript to hide loading overlay when page is loaded -->
         <script>
