feat: test different tv gif

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <!-- TV - Responsive sizing -->
                 <img
-                    src="/assets/tv.gif"
+                    src="/assets/tv-2.gif"
                     id="hero-tv"
                     class="block max-w-none w-screen-tv h-auto relative cursor-pointer"
                     style="z-index: 6"
