fix: remove / in file references

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Ianna Dria - Multimedia Designer</title>
 
         <!-- Favicon -->
-        <link rel="icon" href="/assets/triangle.webp" type="image/png" />
+        <link rel="icon" href="assets/triangle.webp" type="image/png" />
 
         <link
             href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
@@ -54,7 +54,7 @@
             class="fixed inset-0 bg-white flex justify-center items-center z-50"
         >
             <div class="text-center">
-                <img src="/assets/smiley.gif" alt="Loading" class="w-16 h-16 mx-auto mb-4" />
+                <img src="assets/smiley.gif" alt="Loading" class="w-16 h-16 mx-auto mb-4" />
                 <p class="text-lg font-bold">Loading...</p>
             </div>
         </div>
@@ -71,7 +71,7 @@
             <div id="tv-hand-container" class="tv-hand-container">
                 <!-- Spark effect - positioned at impact point BEHIND TV and hand -->
                 <img
-                    src="/assets/Spark.webp"
+                    src="assets/Spark.webp"
                     id="hero-spark"
                     class="absolute max-w-none spark-hidden w-screen-spark h-auto"
                     style="top: -20%; left: -20%; transform-origin: center; z-index: 5"
@@ -79,7 +79,7 @@
 
                 <!-- TV - Responsive sizing -->
                 <img
-                    src="/assets/tv-2.gif"
+                    src="assets/tv-2.gif"
                     id="hero-tv"
                     class="block max-w-none w-screen-tv h-auto relative cursor-pointer"
                     style="z-index: 6"
@@ -87,7 +87,7 @@
 
                 <!-- Hand positioned relative to TV -->
                 <img
-                    src="/assets/Hand.webp"
+                    src="assets/Hand.webp"
                     id="hero-hand"
                     class="absolute hand-continuous max-w-none cursor-pointer w-screen-hand h-auto"
                     style="
@@ -101,7 +101,7 @@
             </div>
 
             <!-- Earth - Bottom Center -->
-            <img src="/assets/Earth.webp" id="hero-earth" class="hero-earth" />
+            <img src="assets/Earth.webp" id="hero-earth" class="hero-earth" />
         </section>
 
         <!-- Modal (Initially Hidden) -->
@@ -287,9 +287,9 @@
             class="h-96 w-full gap-8 flex flex-col lg:flex-row items-center justify-center"
             style="background-image: url(assets/connect-BG.webp)"
         >
-            <img src="/assets/Lets-connect.webp" class="w-60 lg:w-96 h-auto" />
+            <img src="assets/Lets-connect.webp" class="w-60 lg:w-96 h-auto" />
             <div class="flex flex-row gap-4 items-center justify-center">
-                <img src="/assets/smiley.gif" class="w-10 lg:w-16 h-auto" />
+                <img src="assets/smiley.gif" class="w-10 lg:w-16 h-auto" />
                 <a
                     href="mailto:iannadria@gmail.com"
                     target="_blank"
@@ -298,7 +298,7 @@
                 >
             </div>
             <div class="flex flex-row gap-4 items-center justify-center">
-                <img src="/assets/smiley.gif" class="w-10 lg:w-16 h-auto" />
+                <img src="assets/smiley.gif" class="w-10 lg:w-16 h-auto" />
                 <a
                     href="https://www.instagram.com/iannadria/"
                     target="_blank"
