fix: try adding base

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ianna Dria - Multimedia Designer</title>
+        <base href="/iannadria-portfolio/" />
         <!-- Favicon -->
         <link rel="icon" href="./assets/triangle.webp" type="image/png" />
 
