--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="css/animations.css" />
-        <link rel="stylesheet" href="css/responsive.css" />
-        <link rel="stylesheet" href="css/components.css" />
-        <link rel="stylesheet" href="css/fonts.css" />
-        <link rel="stylesheet" href="css/modal.css" />
+        <link rel="stylesheet" href="./css/animations.css" />
+        <link rel="stylesheet" href="./css/responsive.css" />
+        <link rel="stylesheet" href="./css/components.css" />
+        <link rel="stylesheet" href="./css/fonts.css" />
+        <link rel="stylesheet" href="./css/modal.css" />
 
         <style>
             /* Loading Overlay Styles */
@@ -308,10 +308,10 @@
             </div>
         </footer>
 
-        <script src="js/parallax.js"></script>
-        <script src="js/animations.js"></script>
-        <script src="js/modal.js"></script>
-        <script src="js/carousel.js"></script>
+        <script src="./js/parallax.js"></script>
+        <script src="./js/animations.js"></script>
+        <script src="./js/modal.js"></script>
+        <script src="./js/carousel.js"></script>
 
         <!-- JavaScript to hide loading overlay when page is loaded -->
         <script>
