--- a/old.html
+++ b/old.html
@@ -224,7 +224,7 @@
                 id="hero-bg"
                 class="absolute bg-no-repeat bg-cover bg-center"
                 style="
-                    background-image: url('./assets/BG.png');
+                    background-image: url('/assets/BG.png');
                     filter: grayscale(100%);
                     z-index: 1;
                     width: 130%;
