--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ianna Dria - Multimedia Designer</title>
-        <base href="/iannadria-portfolio/" />
         <!-- Favicon -->
-        <link rel="icon" href="./assets/triangle.webp" type="image/png" />
+        <link rel="icon" href="/assets/toffee.webp" type="image/png" />
 
         <link
             href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="./css/animations.css" />
-        <link rel="stylesheet" href="./css/responsive.css" />
-        <link rel="stylesheet" href="./css/components.css" />
-        <link rel="stylesheet" href="./css/fonts.css" />
-        <link rel="stylesheet" href="./css/modal.css" />
+        <link rel="stylesheet" href="/css/animations.css" />
+        <link rel="stylesheet" href="/css/responsive.css" />
+        <link rel="stylesheet" href="/css/components.css" />
+        <link rel="stylesheet" href="/css/fonts.css" />
+        <link rel="stylesheet" href="/css/modal.css" />
 
         <style>
             /* Loading Overlay Styles */
@@ -48,13 +47,16 @@
         </style>
     </head>
     <body class="w-full h-auto font-gobold">
+        <!-- Cursor -->
+        <!-- <img id="custom-cursor" src="/assets/cursor.gif" alt="cursor" /> -->
+
         <!-- Loading Overlay (Initially Visible) -->
         <div
             id="loading-overlay"
             class="fixed inset-0 bg-white flex justify-center items-center z-50"
         >
             <div class="text-center">
-                <img src="./assets/smiley.gif" alt="Loading" class="w-16 h-16 mx-auto mb-4" />
+                <img src="/assets/smiley.gif" alt="Loading" class="w-16 h-16 mx-auto mb-4" />
                 <p class="text-lg font-bold">Loading...</p>
             </div>
         </div>
@@ -71,7 +73,7 @@
             <div id="tv-hand-container" class="tv-hand-container">
                 <!-- Spark effect - positioned at impact point BEHIND TV and hand -->
                 <img
-                    src="./assets/Spark.webp"
+                    src="/assets/Spark.webp"
                     id="hero-spark"
                     class="absolute max-w-none spark-hidden w-screen-spark h-auto"
                     style="top: -20%; left: -20%; transform-origin: center; z-index: 5"
@@ -79,15 +81,18 @@
 
                 <!-- TV - Responsive sizing -->
                 <img
-                    src="./assets/tv-2.gif"
+                    src="/assets/tv.gif"
                     id="hero-tv"
                     class="block max-w-none w-screen-tv h-auto relative cursor-pointer"
                     style="z-index: 6"
                 />
 
+                <!-- Watch Text Helper: Displayed constantly on mobile, displays on cursor when hovering tv -->
+                <img src="/assets/watch.gif" id="hero-watch" class="" style="z-index: 7" />
+
                 <!-- Hand positioned relative to TV -->
                 <img
-                    src="./assets/Hand.webp"
+                    src="/assets/Hand.webp"
                     id="hero-hand"
                     class="absolute hand-continuous max-w-none cursor-pointer w-screen-hand h-auto"
                     style="
@@ -101,7 +106,7 @@
             </div>
 
             <!-- Earth - Bottom Center -->
-            <img src="./assets/Earth.webp" id="hero-earth" class="hero-earth" />
+            <img src="/assets/Earth.webp" id="hero-earth" class="hero-earth" />
         </section>
 
         <!-- Modal (Initially Hidden) -->
@@ -131,7 +136,7 @@
 
         <!-- About Section -->
         <div class="relative -mt-12 -mb-12 z-10">
-            <img src="./assets/about-BG.webp" class="about-image" />
+            <img src="/assets/about-BG.webp" class="about-image" />
 
             <div class="relative z-10 px-8 md:px-16 py-8 md:py-24 max-w-screen-xl mx-auto">
                 <h2 class="text-3xl-gobold md:text-4xl-gobold font-gobold-bolditalic text-blue-400">
@@ -163,13 +168,13 @@
             id="showcase"
             class="w-full h-auto flex flex-col items-center gap-8 md:py-16 py-40"
             style="
-                background-image: url('./assets/showcase-BG.webp');
+                background-image: url('/assets/showcase-BG.webp');
                 background-repeat: no-repeat;
                 background-position: center;
             "
         >
             <div id="showcase-header" class="w-full h-auto flex flex-col items-center">
-                <img src="./assets/Showcase.webp" class="h-auto md:w-96 w-60" />
+                <img src="/assets/showcase.gif" class="h-auto md:w-96 w-60" />
             </div>
 
             <!-- Video Edits -->
@@ -181,7 +186,7 @@
                 >
                     <h2 class="text-3xl-gobold font-gobold-bolditalic">VIDEO EDITS</h2>
                     <img
-                        src="./assets/triangle.webp"
+                        src="/assets/triangle.webp"
                         class="transition-all duration-200 transform group-hover:translate-x-4"
                         alt="Arrow"
                     />
@@ -209,7 +214,7 @@
                 >
                     <h2 class="text-3xl-gobold font-gobold-bolditalic">MOTION GRAPHICS</h2>
                     <img
-                        src="./assets/triangle.webp"
+                        src="/assets/triangle.webp"
                         class="transition-all duration-200 transform group-hover:translate-x-4"
                         alt="Arrow"
                     />
@@ -236,7 +241,7 @@
                 >
                     <h2 class="text-3xl-gobold font-gobold-bolditalic">SOCIAL SHORT FORMS</h2>
                     <img
-                        src="./assets/triangle.webp"
+                        src="/assets/triangle.webp"
                         class="transition-all duration-200 transform group-hover:translate-x-4"
                         alt="Arrow"
                     />
@@ -263,7 +268,7 @@
                 >
                     <h2 class="text-3xl-gobold font-gobold-bolditalic">GRAPHIC DESIGNS</h2>
                     <img
-                        src="./assets/triangle.webp"
+                        src="/assets/triangle.webp"
                         class="transition-all duration-200 transform group-hover:translate-x-4"
                         alt="Arrow"
                     />
@@ -285,11 +290,11 @@
         <!-- Footer -->
         <footer
             class="h-96 w-full gap-8 flex flex-col lg:flex-row items-center justify-center"
-            style="background-image: url(./assets/connect-BG.webp)"
+            style="background-image: url(/assets/connect-BG.webp)"
         >
-            <img src="./assets/Lets-connect.webp" class="w-60 lg:w-96 h-auto" />
+            <img src="/assets/connect.gif" class="w-60 lg:w-96 h-auto" />
             <div class="flex flex-row gap-4 items-center justify-center">
-                <img src="./assets/smiley.gif" class="w-10 lg:w-16 h-auto" />
+                <img src="/assets/smiley.gif" class="w-10 lg:w-16 h-auto" />
                 <a
                     href="mailto:iannadria@gmail.com"
                     target="_blank"
@@ -298,7 +303,7 @@
                 >
             </div>
             <div class="flex flex-row gap-4 items-center justify-center">
-                <img src="./assets/smiley.gif" class="w-10 lg:w-16 h-auto" />
+                <img src="/assets/smiley.gif" class="w-10 lg:w-16 h-auto" />
                 <a
                     href="https://www.instagram.com/iannadria/"
                     target="_blank"
@@ -308,10 +313,12 @@
             </div>
         </footer>
 
-        <script src="./js/parallax.js"></script>
-        <script src="./js/animations.js"></script>
-        <script src="./js/modal.js"></script>
-        <script src="./js/carousel.js"></script>
+        <script src="/js/parallax.js"></script>
+        <script src="/js/animations.js"></script>
+        <script src="/js/modal.js"></script>
+        <script src="/js/carousel.js"></script>
+        <!-- <script src="/js/cursor.js"></script> -->
+        <script src="/js/hero-watch.js"></script>
 
         <!-- JavaScript to hide loading overlay when page is loaded -->
         <script>
